fix scrollbar position on ag-grid

--- a/ui/client-react/src/components/dataTable/agGrid/agGrid.scss
+++ b/ui/client-react/src/components/dataTable/agGrid/agGrid.scss
@@ -26,7 +26,6 @@ $grid-font-size: $font-size - 2;
     color: $font-color;
     font-size: $grid-font-size;
     -webkit-font-smoothing: antialiased;
-    width:100%;
 
     .ag-body {
         background-color: $color2;
